--- a/Simulation/Simulation.vcxproj
+++ b/Simulation/Simulation.vcxproj
@@ -164,11 +164,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Molecule.h" />
+    <ClInclude Include="MoleculeSystem.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Molecule.cpp" />
+    <ClCompile Include="MoleculeSystem.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Simulation.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -180,6 +184,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\fragment.glsl" />
+    <None Include="Shaders\particleFrag.glsl" />
+    <None Include="Shaders\particleVert.glsl" />
     <None Include="Shaders\vertex.glsl" />
   </ItemGroup>
   <ItemGroup>
