--- a/Simulation/Simulation.vcxproj
+++ b/Simulation/Simulation.vcxproj
@@ -177,6 +177,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Molecule.h" />
     <ClInclude Include="MoleculeSystem.h" />
+    <ClInclude Include="Octree.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -184,6 +185,7 @@
   <ItemGroup>
     <ClCompile Include="Molecule.cpp" />
     <ClCompile Include="MoleculeSystem.cpp" />
+    <ClCompile Include="Octree.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Simulation.cpp" />
     <ClCompile Include="stdafx.cpp">
