--- a/Simulation/Simulation.vcxproj
+++ b/Simulation/Simulation.vcxproj
@@ -175,6 +175,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="defines.h" />
     <ClInclude Include="Molecule.h" />
     <ClInclude Include="MoleculeSystem.h" />
     <ClInclude Include="Octree.h" />
@@ -202,6 +203,7 @@
     <None Include="Shaders\vertex.glsl" />
   </ItemGroup>
   <ItemGroup>
+    <CudaCompile Include="MoleculeSystem.cu" />
     <CudaCompile Include="Simulation.cu" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
