--- a/Simulation/Simulation.vcxproj.filters
+++ b/Simulation/Simulation.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="Octree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="defines.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -82,6 +85,9 @@
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="Simulation.cu">
+      <Filter>CUDA files</Filter>
+    </CudaCompile>
+    <CudaCompile Include="MoleculeSystem.cu">
       <Filter>CUDA files</Filter>
     </CudaCompile>
   </ItemGroup>
