particle system modified, no longer uses octrees or forces, collision responds by modifying velocity, CUDA grid and blocks are used
the cuda blocks partition the world into a hashed uniform grid, the
particles collide with the spawned in height map

--- a/Simulation/Simulation.vcxproj
+++ b/Simulation/Simulation.vcxproj
@@ -177,6 +177,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="defines.h" />
     <ClInclude Include="Molecule.h" />
+    <ClInclude Include="MoleculeSystem.cuh" />
     <ClInclude Include="MoleculeSystem.h" />
     <ClInclude Include="Octree.h" />
     <ClInclude Include="Shader.h" />
