--- a/Simulation/Simulation.vcxproj.filters
+++ b/Simulation/Simulation.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="defines.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MoleculeSystem.cuh">
+      <Filter>CUDA files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
